--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.0",
+    "lucide-react": "^0.525.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.299",
     "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
